--- a/part6/aph-catalogue.Rmd
+++ b/part6/aph-catalogue.Rmd
@@ -84,21 +84,21 @@ purus nec, lobortis imperdiet diam.
 
 ### Project RADAR-CNS (EU)
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
-metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
-sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
-tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis
-sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
-Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
-ut massa tempor, ac dapibus dui viverra.  
+Dutch project team: XXX
+APH site: VUmc, GGZ inGeest
+The project is jointly led by King's College London and Janssen Pharmaceutica NV. The project is funded by the Innovative Medicines Initiative, a Public Private Partnership set up between the European Federation of Pharmaceutical Industries and Associations (EFPIA) and the European Union). It includes 23 organizations from across Europe and the US. 
+Full title: RADAR-CNS: Remote Assessment of Disease and Relapse - Central Nervous System
+Topic: Wearable devices to help prevent and treat depression, multiple sclerosis and epilepsy
+Status: Ongoing, XXX-
+Target populations: Patients with major depressive disorder, epilepsy or multiple sclerosis (MS). 
+Project goals: Examine how remote measurement technologies can monitor and improve quality of life and psychological well-being for people with depression, epilepsy, or multiple sclerosis. Technical goals: 1) Built an end-to-end system with generalized data aggregation capabilities. The platform focuses on classes of data rather than specific devices, in order to enhance modularity and adaptability as new devices become available. The platform is delivered under an Apache 2 open source license. 2) Big data solutions.
+Clinical goals: 1) Continuous monitoring of patients, 2) predicting disease onset or relapse (prevention and risk assessment) 
+EMA passive: Android smartphone sensors: 1) Location and movement (GPS), 2) Mood: voice recognition), 3) Social interaction (call and message logs), 4) App interaction and app usage. Wearables: Skin temperature, heart rate (-variability), actigraphy (3-axis accelerometer, gyroscope), galvanic skin conductance (Empatica E4 Wristband, Pebble 2 Smartwatch, Biovotion VSM, Faros 180, and Fitbit devices). 
+EMA active: EMA questionnaires via pRMT application, which was built with Cordova. Outcomes include variability in sleep quality, levels of activity, social interactions, mood, cognitive performance and stress as possible predictors of clinical course. 
+Data management: token-based authentication and authorization. A dashboard app allows for live monitoring of results. Data is streamed and analyzed live. 
+Results: 
+Lessons learned and advice for other researchers: 
 
-Donec sed lectus at sem ultrices commodo. Proin a viverra metus, nec scelerisque
-odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id
-consequat nibh. Ut eget leo blandit orci posuere tincidunt ac sed erat. Aenean
-metus metus, eleifend ut facilisis a, fringilla ut neque. Nunc hendrerit
-cursus eleifend. Pellentesque habitant morbi tristique senectus et netus et
-malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat
-purus nec, lobortis imperdiet diam. 
 
 
 ### NESDA EMA
